Changed it to my actual project

--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sk">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zmysel života</title>
+    <link rel="stylesheet" href="Stylesheets/reset.css">
+    <link rel="stylesheet" href="Stylesheets/normalize.css">
+    <link rel="stylesheet" href="Stylesheets/basic layout.css">
 </head>
 <body>
-    <h1>WUWU HUN <3</h1>
-    <img src="hun.jpg" alt="My love and me kissing together">
+    <div class="obsah">
+        <header>
+            <div id="logo">
+                <h1>Zmysel života</h1>
+                <h2>a životné ciele</h2>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Domov</a></li>
+                    <li><a href="#">Prezentácia</a></li>
+                    <li><a href="#">Test</a></li>
+                    <li><a href="#">Práca</a></li>
+                    <li><a href="#">Zdroje</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h1>Domov</h1>
+            <p>Dobrý deň a vitajte na mojej stránke. Cieľom tejto stránky je vám vysvetliť moju ročníkovú prácu, ale taktiež vám pomôcť pri vašom hladaní a plnení vášho životného zmyslu, ako aj vaších životných cieľov.</p>
+            <p>Táto stránka sa skladá z prezentácie, kde sa odprezentuje moja ročníkova práca, testu kde sa môžete dozvedieť o tom aký má podľa vás život zmysel, mojej ročníkovej práce a nakoniec zdrojov ktoré som použil pri písaní mojej ročníkovej práci.</p>
+        </main>
+        <footer>            
+            <p>Stránku vytvoril Michal Pataky zo IV.A školského roku 2020/2021</p>
+            <address>
+                Kontakt:
+                <br>
+                <a href="mailto:mikopataky@gmail.com">mikopataky@gmail.com</a>
+                <br>
+                <a href="mailto:michal.pataky@lifeacademy.sk">michal.pataky@lifeacademy.sk</a>
+            </address>
+        </footer>
+    </div>
 </body>
 </html>
