Did some minor changes and corrected grammar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Domov</a></li>
+                    <li class="actual"><a href="#">Domov</a></li>
                     <li><a href="#">Prezentácia</a></li>
                     <li><a href="#">Test</a></li>
                     <li><a href="#">Práca</a></li>
@@ -26,8 +26,8 @@
         </header>
         <main>
             <h1>Domov</h1>
-            <p>Dobrý deň a vitajte na mojej stránke. Cieľom tejto stránky je vám vysvetliť moju ročníkovú prácu, ale taktiež vám pomôcť pri vašom hladaní a plnení vášho životného zmyslu, ako aj vaších životných cieľov.</p>
-            <p>Táto stránka sa skladá z prezentácie, kde sa odprezentuje moja ročníkova práca, testu kde sa môžete dozvedieť o tom aký má podľa vás život zmysel, mojej ročníkovej práce a nakoniec zdrojov ktoré som použil pri písaní mojej ročníkovej práci.</p>
+            <p>Dobrý deň a vitajte na mojej stránke. Cieľom tejto stránky je vysvetliť vám moju ročníkovú prácu, ale taktiež vám pomôcť pri vašom hladaní a plnení vášho životného zmyslu, ako aj vaších životných cieľov.</p>
+            <p>Táto stránka sa skladá z prezentácie, kde sa odprezentuje moja ročníkova práca, z testu, kde sa môžete dozvedieť o tom aký má podľa vás život zmysel, z mojej ročníkovej práce a nakoniec zo zdrojov, ktoré som použil pri písaní mojej ročníkovej práce.</p>
         </main>
         <footer>            
             <p>Stránku vytvoril Michal Pataky zo IV.A školského roku 2020/2021</p>
