--- a/zdroje.html
+++ b/zdroje.html
@@ -42,7 +42,7 @@
                 <p class="source">u/SabatonBabylon: The HEL Jumper In: Royal Road [online]. 2020, [cit. Január 2021]. Dostupné na internete: &lt<a class="link_ignore" href="https://www.royalroad.com/fiction/33140/the-hel-jumper-survive">https://www.royalroad.com/fiction/33140/the-hel-jumper-survive</a>/></p>
             </section>
             <section>
-                <h1>Zdroje pre Stránku</h1>
+                <h1>Zdroje pre stránku</h1>
                 <p>Toto sú zdroje ktoré som použil pri tvorbe stránky a bez ktorých by som ju nedokázal vytvoriť:</p>
                 <p class="source">CASTRO E., HYSLOP B.: HTML5 a CSS3 Názorný průvodce tvorbou WWW stránek. Brno : Computer Press, 2012. 439 s. ISBN 978-80-251-3733-8</p>
                 <p class="source"><a class="link_ignore" href="https://www.w3schools.com">https://www.w3schools.com</a></a></p>
