Finished test and added ids to praca.html

--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="Stylesheets/reset.css">
     <link rel="stylesheet" href="Stylesheets/normalize.css">
     <link rel="stylesheet" href="Stylesheets/basic layout.css">
+    <link rel="stylesheet" href="Stylesheets/test.css">
 </head>
 <body>
     <div class="obsah">
@@ -32,7 +33,75 @@
 
         <main>
             <h1>Test</h1>
+            <div class="test">
+                <h2>1. Zoraďte možnosti od najdôležitejšej po najmenej dôležitú</h2>
+                    <p>a) Rozmnožovanie sa A</p>
+                    <p>b) Byť ten kto rozhoduje B</p>
+                    <p>c) Riadiť sa Božiou vôľou C</p>
+                    <p>d) Čo najviac sa baviť D</p>
+                    <p>e) Zistiť čo najviac o vesmíre E</p>
+                    <p>f) Pomáhať ostatným F</p>
+                    <p>g) Byť mojím najlepším ja G</p>
 
+                <h2>2. Čo by sa mal človek snažiť dosiahnuť?</h2>
+                    <p>a) Pomáhať čo najviac, či už svojím blizkym alebo cudzím ľuďom.	FG</p>
+                    <p>b) Pomôcť zdokonaliť ľudskú rasu alebo pomôcť s posunutím vedeckých poznatkov.	AE</p>
+                    <p>c) Byť čo najvyššie, získať čo najviac.	B</p>
+                    <p>d) Byť čo najvernejší svojej viere, žiť bližšie k božiemu ideálu. C</p>
+                    <p>e) Čo najviac si užiť život. D</p>
+
+                <h2>3. Čo považujete za stratu času? (Viac možností)</h2>
+                    <p>a) Rozmýšlanie nad rozhodnutím. B</p>
+                    <p>b) Modlenie sa, oslavovanie boha. C</p>
+                    <p>c) Nadmerné hranie/čítanie/pozeranie/... D</p>
+                    <p>d) Učenie sa. G</p>
+                    <p>e) Vedecký výskum. AE</p>
+                    <p>f) Dávanie bezdomovcom. F</p>
+
+                <h2>4. Z pomedzi dvojíc vyberte to čo považujete za lepšie/dôležitejšie.</h2>
+                    <p>a) Genetický výskum A/E Vylepšenie obnoviteľnej energie</p>
+                    <p>b) Pomáhanie druhým F/G Pomáhanie samému sebe</p>
+                    <p>c) Pobožný život C/D Hedonistický život</p>
+                    <p>d) Rozhodovať za iných B/G Rozhodovať iba za seba</p>
+
+                <h2>5. Ktoré slovo by ste spojili so zmyslom života?</h2>
+                    <p>a) Zábava D</p>
+                    <p>b) Veda E</p>
+                    <p>c) Evolúcia A</p>
+                    <p>d) Zlepšovanie sa G</p>
+                    <p>e) Moc B</p>
+                    <p>f) Boh C</p>
+                    <p>g) Darovanie F</p>
+
+                <h2>6. Ktoré slovo by ste NEspojili so zmyslom života?</h2>
+                    <p>a) Zábava D</p>
+                    <p>b) Vedecké poznatky E</p>
+                    <p>c) Rozmnožovanie sa A</p>
+                    <p>d) Zdokonaliť sa G</p>
+                    <p>e) Ovládať B</p>
+                    <p>f) Náboženstvo C</p>
+                    <p>g) Pomáhanie F</p>
+
+                <h2>7. čo cítite že je najbližšie k Vášmu životnému cieľu?</h2>
+                    <p>a) Mať rodinu A</p>
+                    <p>b) Vynájsť niečo nové E</p>
+                    <p>c) Žiť pobožný život C</p>
+                    <p>d) Mať pocit že som dokázal niečo veľké G</p>
+                    <p>e) Pomôcť čo najviac ľuďom F</p>
+                    <p>f) Mať všetko pod kontrolou B</p>
+                    <p>g) Snažiť sa mať pestrý život D</p>
+            </div>
+            <br>
+            <h2>Výsledok:</h2>
+            <p>Pre výsledok spočítajte písmena vedľa odpovedí ktoré ste si vybrali (V prvom cvičení spočítajte písmená ktoré sú top 3). Výsledok je písmeno ktoré ste si vybrali najviac krát (V prípade rovnakého počtu si prečítajte oba výsledky).</p>
+            <br>
+            <p>A Biologický zmysel života - <a href="praca.html#a">Vysvetlenie zmyslu života</a> - <a href="praca.html#aa">Životné ciele</a></p>
+            <p>B Získanie moci - <a href="praca.html#b">Vysvetlenie zmyslu života</a> - <a href="praca.html#bb">Životné ciele</a></p>
+            <p>C Náboženský zmysel života - <a href="praca.html#c">Vysvetlenie zmyslu života</a> - <a href="praca.html#cc">Životné ciele</a></p>
+            <p>D Milovanie života takého aký je - <a href="praca.html#d">Vysvetlenie zmyslu života</a> - <a href="praca.html#dd">Životné ciele</a></p>
+            <p>E Hľadanie múdrostí a vedomostí - <a href="praca.html#e">Vysvetlenie zmyslu života</a> - <a href="praca.html#ee">Životné ciele</a></p>
+            <p>F Urobiť dobrú a/alebo tú správnu vec - <a href="praca.html#f">Vysvetlenie zmyslu života</a> - <a href="praca.html#ff">Životné ciele</a></p>
+            <p>G Docieliť svoj potenciál a ideály - <a href="praca.html#g">Vysvetlenie zmyslu života</a> - <a href="praca.html#gg">Životné ciele</a></p>
         </main>
 
 
