Finally did Graphics

--- a/zdroje.html
+++ b/zdroje.html
@@ -53,6 +53,7 @@
                 <h1>Pomoc</h1>
                 <p>Ľudia ktorí mi pomohli s dizajnom, grafikou a testovaním:</p>
                 <p class="source">Laura Klein</p>
+                <p class="source">Bruno Schweitzer</p>
                 <p class="source">Lenka Tvrdovská</p>
             </section>
         </main>
