--- a/prezentacia.html
+++ b/prezentacia.html
@@ -37,10 +37,29 @@
             <p>Tu ste našli moju prezentáciu o mojej ročníkovej práci. Pod ňou sú dve šípky ktorými môžete preklikávať cez všetky snímky.</p>
 
             <div class="presentation">
-                <img class="animated animation" src="obrázky/1.jpg" style="width:100%">
-                <img class="animated animation" src="obrázky/2.jpg" style="width:100%">
-                <img class="animated animation" src="obrázky/3.jpg" style="width:100%">
-                <img class="animated animation" src="obrázky/4.jpg" style="width:100%">
+                <img class="animated animation" src="obrázky/1.png" style="width:100%">
+                <img class="animated animation" src="obrázky/2.png" style="width:100%">
+                <img class="animated animation" src="obrázky/3.png" style="width:100%">
+                <img class="animated animation" src="obrázky/4.png" style="width:100%">
+                <img class="animated animation" src="obrázky/5.png" style="width:100%">
+                <img class="animated animation" src="obrázky/6.png" style="width:100%">
+                <img class="animated animation" src="obrázky/7.png" style="width:100%">
+                <img class="animated animation" src="obrázky/8.png" style="width:100%">
+                <img class="animated animation" src="obrázky/9.png" style="width:100%">
+                <img class="animated animation" src="obrázky/10.png" style="width:100%">
+                <img class="animated animation" src="obrázky/11.png" style="width:100%">
+                <img class="animated animation" src="obrázky/12.png" style="width:100%">
+                <img class="animated animation" src="obrázky/13.png" style="width:100%">
+                <img class="animated animation" src="obrázky/14.png" style="width:100%">
+                <img class="animated animation" src="obrázky/15.png" style="width:100%">
+                <img class="animated animation" src="obrázky/16.png" style="width:100%">
+                <img class="animated animation" src="obrázky/17.png" style="width:100%">
+                <img class="animated animation" src="obrázky/18.png" style="width:100%">
+                <img class="animated animation" src="obrázky/19.png" style="width:100%">
+                <img class="animated animation" src="obrázky/20.png" style="width:100%">
+                <img class="animated animation" src="obrázky/21.png" style="width:100%">
+                <img class="animated animation" src="obrázky/22.png" style="width:100%">
+                <img class="animated animation" src="obrázky/23.png" style="width:100%">
               
                 <button class="left-button" onclick="plusDivs(-1)">&#10094;</button>
                 <button class="right-button" onclick="plusDivs(1)">&#10095;</button>
