Finishing touches + Documents

--- a/blank.html
+++ b/blank.html
@@ -24,6 +24,7 @@
                     <li><a href="test.html">Test</a></li>
                     <li><a href="praca.html">Práca</a></li>
                     <li><a href="zdroje.html">Zdroje</a></li>
+                    <li><a href="dokumenty.html">Dokumenty</a></li>
                 </ul>
             </nav>
         </header>
@@ -31,10 +32,8 @@
 <!-- === HLAVNÁ ČASŤ STRÁNKY === -->
 
         <main>
-
+            
         </main>
-
-
 
 <!-- === FOOTER === -->
         <footer>            
