--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li><a href="test.html">Test</a></li>
                     <li><a href="praca.html">Práca</a></li>
                     <li><a href="zdroje.html">Zdroje</a></li>
+                    <li><a href="dokumenty.html">Dokumenty</a></li>
                 </ul>
             </nav>
         </header>
@@ -32,8 +33,8 @@
 
     <main>
         <h1>Domov</h1>
-        <p>Dobrý deň a vitajte na mojej stránke. Cieľom tejto stránky je vysvetliť vám moju ročníkovú prácu, ale taktiež vám pomôcť pri vašom hladaní a plnení vášho životného zmyslu, ako aj vaších životných cieľov.</p>
-        <p>Táto stránka sa skladá z prezentácie, kde sa odprezentuje moja ročníkova práca, z testu, kde sa môžete dozvedieť o tom aký má podľa vás život zmysel, z mojej ročníkovej práce a nakoniec zo zdrojov, ktoré som použil pri písaní mojej ročníkovej práce.</p>
+        <p>Dobrý deň a vitajte na mojej stránke. Cieľom tejto stránky je vysvetliť vám moju ročníkovú prácu, ukázať vám rôzne druhy zmyslov života, ale taktiež vám pomôcť pri vašom hladaní a plnení vášho životného zmyslu, ako aj vaších životných cieľov.</p>
+        <p>Táto stránka sa skladá z prezentácie, kde sa odprezentuje moja ročníkova práca, z testu, kde sa môžete dozvedieť o tom aký má podľa vás život zmysel alebo aký zmysel sa k vám hodí, z mojej ročníkovej práce ktorú si môžete celú prečítať a zo zdrojov, ktoré som použil pri písaní mojej ročníkovej práce, robení stránky a ľudí ktorý mi pomohli. Nakoniec sú dokumenty ktoré si môžete stiahnuť. Je tam moja ročníková práca, prezentácia ročníkovej práce a zdrojový kód stránky.</p>
     </main>
 
 
