--- a/praca.html
+++ b/praca.html
@@ -25,6 +25,7 @@
                     <li><a href="test.html">Test</a></li>
                     <li class="actual"><a href="praca.html">Práca</a></li>
                     <li><a href="zdroje.html">Zdroje</a></li>
+                    <li><a href="dokumenty.html">Dokumenty</a></li>
                 </ul>
             </nav>
         </header>
@@ -33,7 +34,7 @@
 
         <main>
             <h1>Ročníková práca</h1>
-            <p>Tu môžete nájsť moju ročníkovú prácu. Ak by ste ju nechceli čítať celú, môžete kliknúť na jednotlivé časti v obsahu a rovno vás to tam zavedie. Ak by ste sa chceli rýchlo dostať naspáť na vrch stránky tak v pravom dolnom rohu máťe šipku ktorá vás tam hodí.</p>
+            <p>Tu môžete nájsť moju ročníkovú prácu. Ak by ste ju nechceli čítať celú, môžete kliknúť na jednotlivé časti v obsahu a rovno vás to tam zavedie. Ak by ste sa chceli rýchlo dostať naspäť na vrch stránky tak v pravom dolnom rohu máťe šipku ktorá vás tam hodí.</p>
             <article>
                 <h2>Obsah</h2>
                 <ul>
@@ -129,8 +130,8 @@
                 <h3>Kapitola 2.8</h3>
                 <p class="work">Človek by sa nemal usilovať o&nbsp;pochopenie, pozn&aacute;vanie alebo ch&aacute;panie zmyslu života.</p>
                 <p class="work">Pr&iacute;kladom n&aacute;m m&ocirc;že byť obyčajn&yacute; človek, ktor&eacute;ho životn&yacute; cieľ m&ocirc;že byť ak&yacute;koľvek. Pre tohto človeka zmysel života je niečo, čo sa ned&aacute; len tak pochopiť. Žije si svoj život, pln&iacute; si jeho sny a&nbsp;životn&eacute; ciele. Keď bude umierať tak pravdepodobne nebude vedieť či svoj životn&yacute; zmysel naplnil, v&nbsp;čom je aj probl&eacute;m tohto vysvetlenia zmyslu života.</p>
-                <p class="work">No nesmieme zabudn&uacute;ť to, že možno zmysel n&aacute;&scaron;ho života mohla byť mal&aacute; vec ktor&uacute; si ani nepam&auml;t&aacute;me. A&nbsp;taktiež nesmieme zabudn&uacute;ť aj to, že z&nbsp;veľk&eacute; veci, sa zač&iacute;naj&uacute; maličkosťami.</p>
-                <p class="work"><stronh3>Kapitola 2.9</h3trong></p>
+                <p class="work">No nesmieme zabudn&uacute;ť to, že možno zmysel n&aacute;&scaron;ho života mohla byť mal&aacute; vec ktor&uacute; si ani nepam&auml;t&aacute;me. A&nbsp;taktiež nesmieme zabudn&uacute;ť aj to, že veľk&eacute; veci, sa zač&iacute;naj&uacute; maličkosťami.</p>
+                <h3>Kapitola 2.9</h3>
                 <p class="work">Život nem&aacute; zmysel.</p>
                 <p class="work">K&nbsp;tomuto zmyslu života pr&iacute;klad nem&aacute;m, ale m&aacute;m k&nbsp;nemu jeho probl&eacute;m. Veľmi veľa ľud&iacute; si mysl&iacute; že život nem&aacute; zmysel. A&nbsp;to nie je probl&eacute;m, je to rovnako možn&aacute; odpoveď k&nbsp;zmyslu života ako každ&aacute; in&aacute;.</p>
                 <p class="work">Tu je probl&eacute;m s&nbsp;cieľom a&nbsp;d&ocirc;vodom. Každ&yacute; človek si aspoň raz povie na čo je život ak nem&aacute; zmysel a&nbsp;t&yacute;m p&aacute;dom na čo sa snažiť keď nakoniec je aj tak v&scaron;etko zbytočn&eacute;. Prečo sa snažiť aj keď zomrieme? Prečo nechať niečo za nami keď sa raz aj tak vesm&iacute;r skonč&iacute;? K&nbsp;tejto ot&aacute;zke použijem ako odpoveď parafr&aacute;zu od u/SabatonBabylon ktor&yacute; nap&iacute;sal v&nbsp;jeho pr&iacute;behu <em>The HEL Jumper</em>: Vesm&iacute;r je veľk&yacute;, studen&yacute;, krut&yacute; a bezcitn&yacute;. Ale ak bude&scaron; bojovať dosť tvrdo, dosť dlho, a si ochotn&aacute; pretrpieť v&scaron;etk&yacute;m čo na teba hod&iacute;... m&ocirc;že&scaron; si vyrezať svoj vlastn&yacute;, mal&yacute; k&uacute;tik ktor&yacute; ovl&aacute;da&scaron; ty. N&aacute;jde&scaron; tam &scaron;ťastie pre seba a pre t&yacute;ch, okolo teba. Tvoj mal&yacute; k&uacute;tik m&ocirc;že byť maličk&yacute;, tepl&yacute;, l&aacute;skav&yacute; a miluj&uacute;ci.</p>
