--- a/test.html
+++ b/test.html
@@ -25,6 +25,7 @@
                     <li class="actual"><a href="test.html">Test</a></li>
                     <li><a href="praca.html">Práca</a></li>
                     <li><a href="zdroje.html">Zdroje</a></li>
+                    <li><a href="dokumenty.html">Dokumenty</a></li>
                 </ul>
             </nav>
         </header>
@@ -33,6 +34,9 @@
 
         <main>
             <h1>Test</h1>
+
+            <p>Tu môžete vidieť test kde môžete zistiť aký zmysel života sa k vám hodí. Odpovede si zapisujte aby ste si mohli vypočítať výsledok.</p>
+
             <div class="test">
                 <h2>1. Zoraďte možnosti od najdôležitejšej po najmenej dôležitú</h2>
                     <p>a) Rozmnožovanie sa A</p>
@@ -92,9 +96,20 @@
                     <p>g) Snažiť sa mať pestrý život D</p>
             </div>
             <br>
-            <h2>Výsledok:</h2>
-            <p>Pre výsledok spočítajte písmena vedľa odpovedí ktoré ste si vybrali (V prvom cvičení spočítajte písmená ktoré sú top 3). Výsledok je písmeno ktoré ste si vybrali najviac krát (V prípade rovnakého počtu si prečítajte oba výsledky).</p>
+
+            <h2>Ako vypočítať výsledok</h2>
+            <p>1. príklad: pridajte +1 ku každému písmenku v troch najdôležitejších veciach vášho výberu.</p>
+            <p>2. príklad: pridajte +1 k písmenku odpovede ktorú ste si vybrali.</p>
+            <p>3. príklad: odrátajte -1 ku každému písmenku odpovedí ktorých ste si vybrali.</p>
+            <p>4. príklad: pridajte +1 ku písmenku odpovede ktorú ste si vybrali.</p>
+            <p>5. príklad: pridajte +1 ku písmenku odpovede ktorú ste si vybrali.</p>
+            <p>6. príklad: odrátajte -1 k písmenku odpovede ktorú ste si vybrali.</p>
+            <p>7. príklad: pridajte +1 ku písmenku odpovede ktorú ste si vybrali.</p>
             <br>
+            <p>Váš výsledok je písmenko s najväčším počtom bodov. V prípade istého počtu bodov váš výsledok sú obidva písmenká.</p>
+
+
+            <h2>Výsledok:</h2>
             <p>A Biologický zmysel života - <a href="praca.html#a">Vysvetlenie zmyslu života</a> - <a href="praca.html#aa">Životné ciele</a></p>
             <p>B Získanie moci - <a href="praca.html#b">Vysvetlenie zmyslu života</a> - <a href="praca.html#bb">Životné ciele</a></p>
             <p>C Náboženský zmysel života - <a href="praca.html#c">Vysvetlenie zmyslu života</a> - <a href="praca.html#cc">Životné ciele</a></p>
