--- a/zdroje.html
+++ b/zdroje.html
@@ -25,6 +25,7 @@
                     <li><a href="test.html">Test</a></li>
                     <li><a href="praca.html">Práca</a></li>
                     <li class="actual"><a href="zdroje.html">Zdroje</a></li>
+                    <li><a href="dokumenty.html">Dokumenty</a></li>
                 </ul>
             </nav>
         </header>
