--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
 
         <div class="choice2 choice">
-            <a href="">
-                <h1>Prázdne</h1>
-                <h2>Coming soon</h2>
+            <a href="games/">
+                <h1>Hry</h1>
+                <h2>Moje hry</h2>
             </a>
         </div>
 
