Refinement of the games website

--- a/games/games/NumberWizardWebGL/index.html
+++ b/games/games/NumberWizardWebGL/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | The Dream of the Living</title>
+    <title>Unity WebGL Player | Number Wizard UI</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="stylesheet" href="../styles/games.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
@@ -22,19 +23,19 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">The Dream of the Living</div>
+        <div id="unity-build-title">Number Wizard</div>
       </div>
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/The Dream of the Living.loader.js";
+      var loaderUrl = buildUrl + "/NumberWizardWebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/The Dream of the Living.data",
-        frameworkUrl: buildUrl + "/The Dream of the Living.framework.js",
-        codeUrl: buildUrl + "/The Dream of the Living.wasm",
+        dataUrl: buildUrl + "/NumberWizardWebGL.data",
+        frameworkUrl: buildUrl + "/NumberWizardWebGL.framework.js",
+        codeUrl: buildUrl + "/NumberWizardWebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "The Dream of the Living",
+        productName: "Number Wizard UI",
         productVersion: "1.0",
       };
 
