--- a/rocnikova-praca/index.html
+++ b/rocnikova-praca/index.html
@@ -25,6 +25,7 @@
                     <li><a href="praca.html">Práca</a></li>
                     <li><a href="zdroje.html">Zdroje</a></li>
                     <li><a href="dokumenty.html">Dokumenty</a></li>
+                    <li><a href="../index.html">Späť</a></li>
                 </ul>
             </nav>
         </header>
