More bug fixes + New font and design

--- a/games/index.html
+++ b/games/index.html
@@ -17,8 +17,8 @@
         </nav>
     </header>
     <main>
-        <div class="choice1 choice"><a href="NumberWizardWebGL/">Number Wizard</a></div>
-        <div class="choice2 choice"><a href="The-Dream-of-the-Living/">The Dream of the Living</a></div>
+        <div class="choice1 choice"><a href="games/NumberWizardWebGL/">Number Wizard</a></div>
+        <div class="choice2 choice"><a href="games/The-Dream-of-the-Living/">THE DREAM OF THE LIVING</a></div>
     </main>
 </body>
 </html>
