--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </div>
 
         <div class="choice3 choice">
-            <a href="">
-                <h1>Prázdne</h1>
-                <h2>Coming soon</h2>
+            <a href="zvoncek/">
+                <h1></h1>
+                <h2>Stránka reštaurácie</h2>
             </a>
         </div>
     </div>
